Update theme for obsidian v1.0.0

--- a/src/base/root.scss
+++ b/src/base/root.scss
@@ -37,3 +37,8 @@ $header-styles: (
 		'letter-spacing': 0.3px,
 	),
 );
+
+.theme-dark {
+	--background-primary: #{$light-purple};
+	--interactive-normal: #{$ghost-purple};
+}
