--- a/obsidian.css
+++ b/obsidian.css
@@ -1,215 +1,2 @@
 @import url(https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap);
-.theme-dark {
-  --background-primary: #262335;
-  --interactive-normal: #372b3d;
-}
-
-body {
-  --font-text-theme: "Archivo", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-editor-theme: "Archivo", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-interface-theme: "Archivo", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-h1,
-.markdown-rendered h1,
-.HyperMD-header-1,
-.HyperMD-list-line .cm-header-1 {
-  font-size: 40px;
-  letter-spacing: 0.3px;
-}
-
-h2,
-.markdown-rendered h2,
-.HyperMD-header-2,
-.HyperMD-list-line .cm-header-2 {
-  font-size: 34px;
-  letter-spacing: 0.3px;
-}
-
-h3,
-.markdown-rendered h3,
-.HyperMD-header-3,
-.HyperMD-list-line .cm-header-3 {
-  font-size: 30px;
-  letter-spacing: 0.3px;
-}
-
-h4,
-.markdown-rendered h4,
-.HyperMD-header-4,
-.HyperMD-list-line .cm-header-4 {
-  font-size: 26px;
-  letter-spacing: 0.3px;
-}
-
-h5,
-.markdown-rendered h5,
-.HyperMD-header-5,
-.HyperMD-list-line .cm-header-5 {
-  font-size: 22px;
-  letter-spacing: 0.3px;
-}
-
-h6,
-.markdown-rendered h6,
-.HyperMD-header-6,
-.HyperMD-list-line .cm-header-6 {
-  font-size: 18px;
-  letter-spacing: 0.3px;
-}
-
-a,
-.cm-s-obsidian span.cm-link,
-.cm-s-obsidian span.cm-hmd-internal-link,
-.markdown-rendered .internal-link {
-  color: #f97e72;
-  text-decoration: none;
-}
-a:hover,
-.cm-s-obsidian span.cm-link:hover,
-.cm-s-obsidian span.cm-hmd-internal-link:hover,
-.markdown-rendered .internal-link:hover {
-  color: #ff7edb;
-  text-decoration: underline;
-}
-
-.markdown-rendered hr {
-  border-color: #372b3d;
-}
-
-.workspace-tabs .workspace-leaf.mod-active {
-  border-color: #880088;
-}
-
-button,
-.markdown-rendered button.copy-code-button {
-  background-color: #241b2f;
-}
-button:hover,
-.markdown-rendered button.copy-code-button:hover {
-  background-color: #880088;
-  color: var(--text-normal);
-}
-
-.theme-light .workspace-split.mod-root .workspace-leaf .view-header,
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-header,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content {
-  background-color: #262335;
-}
-.theme-light .workspace-split.mod-root .workspace-leaf .view-header,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-header {
-  border-bottom: 1px solid;
-  border-color: rgba(128, 128, 128, 0.3490196078);
-}
-.theme-light .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container::after,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container::after {
-  display: none;
-}
-.theme-light .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container .view-header-title,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container .view-header-title {
-  color: rgba(255, 255, 255, 0.5019607843);
-}
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content :not(pre) > code[class*=language-],
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content pre[class*=language-],
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-begin-bg,
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-end-bg,
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-bg,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content :not(pre) > code[class*=language-],
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content pre[class*=language-],
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-begin-bg,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-end-bg,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-bg {
-  background-color: #171520;
-}
-.theme-light .workspace-split.mod-root .workspace-leaf .view-content .markdown-rendered blockquote,
-.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .markdown-rendered blockquote {
-  border-color: #372b3d;
-}
-.theme-light .workspace-split.mod-root .workspace-leaf.mod-active .view-header,
-.theme-dark .workspace-split.mod-root .workspace-leaf.mod-active .view-header {
-  border-color: #880088;
-}
-.theme-light .workspace-split.mod-root .workspace-leaf.mod-active .view-header .view-header-title-container .view-header-title,
-.theme-dark .workspace-split.mod-root .workspace-leaf.mod-active .view-header .view-header-title-container .view-header-title {
-  color: #ffffff;
-}
-
-.popover {
-  background-color: #241b2f;
-}
-
-.workspace-ribbon,
-.status-bar,
-.workspace-ribbon.mod-left.is-collapsed,
-.workspace-ribbon.mod-left:before,
-.mod-macos.is-hidden-frameless:not(.is-popout-window) .sidebar-toggle-button.mod-right {
-  background-color: #171520;
-}
-
-.workspace-tabs .workspace-leaf,
-.mod-root .workspace-tabs .workspace-leaf {
-  background-color: #241b2f;
-}
-
-.workspace-split.mod-root .workspace-leaf.mod-active .view-header {
-  margin: 0;
-}
-
-.workspace-leaf-resize-handle {
-  border-color: #372b3d;
-}
-.workspace-leaf-resize-handle:hover {
-  border-color: #880088;
-}
-
-.workspace-ribbon.mod-right.is-collapsed {
-  border-left-color: #171520;
-}
-
-.workspace-tab-header-container,
-.workspace-tab-header-inner,
-.workspace-tab-container-before.is-before-active .workspace-tab-header-inner,
-.workspace-tab-container-after.is-after-active .workspace-tab-header-inner,
-.workspace-tab-header.is-before-active .workspace-tab-header-inner,
-.workspace-tab-header.is-after-active .workspace-tab-header-inner {
-  background-color: #171520;
-}
-
-.workspace-tab-container-before.is-before-active,
-.workspace-tab-container-after.is-after-active,
-.workspace-tab-header.is-before-active,
-.workspace-tab-header.is-after-active,
-.workspace-tab-header.is-active,
-.workspace-tab-header.is-active,
-.workspace-tab-header.is-active .workspace-tab-header-inner {
-  background-color: #262335;
-}
-
-.workspace-tab-header.is-active .workspace-tab-header-inner {
-  background-color: #241b2f;
-}
-
-.workspace-tab-container-before.is-before-active {
-  display: none;
-}
-
-.vertical-tab-header {
-  background-color: #241b2f;
-}
-
-.workspace-split.mod-left-split .workspace-tabs .workspace-leaf {
-  border-radius: 0;
-}
-
-input[type=text],
-input[type=search],
-textarea {
-  background-color: #171520;
-}
-
-.card,
-.suggestion-container.mod-search-suggestion,
-.suggestion-container.mod-search-suggestion .suggestion {
-  background-color: #171520;
-}
+.theme-dark{--background-primary:#262335;--interactive-normal:#372b3d}body{--font-text-theme:"Archivo","Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";--font-editor-theme:"Archivo","Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";--font-interface-theme:"Archivo","Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"}.HyperMD-header-1,.HyperMD-list-line .cm-header-1,.markdown-rendered h1,h1{font-size:40px;letter-spacing:.3px}.HyperMD-header-2,.HyperMD-list-line .cm-header-2,.markdown-rendered h2,h2{font-size:34px;letter-spacing:.3px}.HyperMD-header-3,.HyperMD-list-line .cm-header-3,.markdown-rendered h3,h3{font-size:30px;letter-spacing:.3px}.HyperMD-header-4,.HyperMD-list-line .cm-header-4,.markdown-rendered h4,h4{font-size:26px;letter-spacing:.3px}.HyperMD-header-5,.HyperMD-list-line .cm-header-5,.markdown-rendered h5,h5{font-size:22px;letter-spacing:.3px}.HyperMD-header-6,.HyperMD-list-line .cm-header-6,.markdown-rendered h6,h6{font-size:18px;letter-spacing:.3px}.cm-s-obsidian span.cm-hmd-internal-link,.cm-s-obsidian span.cm-link,.markdown-rendered .internal-link,a{color:#f97e72;text-decoration:none}.cm-s-obsidian span.cm-hmd-internal-link:hover,.cm-s-obsidian span.cm-link:hover,.markdown-rendered .internal-link:hover,a:hover{color:#ff7edb;text-decoration:underline}.markdown-rendered hr{border-color:#372b3d}.workspace-tabs .workspace-leaf.mod-active{border-color:#808}.markdown-rendered button.copy-code-button,button{background-color:#241b2f}.markdown-rendered button.copy-code-button:hover,button:hover{background-color:#808;color:var(--text-normal)}.theme-dark .workspace-split.mod-root .workspace-leaf .view-content,.theme-dark .workspace-split.mod-root .workspace-leaf .view-header,.theme-light .workspace-split.mod-root .workspace-leaf .view-content,.theme-light .workspace-split.mod-root .workspace-leaf .view-header{background-color:#262335}.theme-dark .workspace-split.mod-root .workspace-leaf .view-header,.theme-light .workspace-split.mod-root .workspace-leaf .view-header{border-bottom:1px solid;border-color:hsla(0,0%,50%,.349)}.theme-dark .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container:after,.theme-light .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container:after{display:none}.theme-dark .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container .view-header-title,.theme-light .workspace-split.mod-root .workspace-leaf .view-header .view-header-title-container .view-header-title{color:hsla(0,0%,100%,.502)}.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-begin-bg,.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-bg,.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-end-bg,.theme-dark .workspace-split.mod-root .workspace-leaf .view-content :not(pre)>code[class*=language-],.theme-dark .workspace-split.mod-root .workspace-leaf .view-content pre[class*=language-],.theme-light .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-begin-bg,.theme-light .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-bg,.theme-light .workspace-split.mod-root .workspace-leaf .view-content .cm-s-obsidian div.HyperMD-codeblock-end-bg,.theme-light .workspace-split.mod-root .workspace-leaf .view-content :not(pre)>code[class*=language-],.theme-light .workspace-split.mod-root .workspace-leaf .view-content pre[class*=language-]{background-color:#171520}.theme-dark .workspace-split.mod-root .workspace-leaf .view-content .markdown-rendered blockquote,.theme-light .workspace-split.mod-root .workspace-leaf .view-content .markdown-rendered blockquote{border-color:#372b3d}.theme-dark .workspace-split.mod-root .workspace-leaf.mod-active .view-header,.theme-light .workspace-split.mod-root .workspace-leaf.mod-active .view-header{border-color:#808}.theme-dark .workspace-split.mod-root .workspace-leaf.mod-active .view-header .view-header-title-container .view-header-title,.theme-light .workspace-split.mod-root .workspace-leaf.mod-active .view-header .view-header-title-container .view-header-title{color:#fff}.popover{background-color:#241b2f}.mod-macos.is-hidden-frameless:not(.is-popout-window) .sidebar-toggle-button.mod-right,.status-bar,.workspace-ribbon,.workspace-ribbon.mod-left.is-collapsed,.workspace-ribbon.mod-left:before{background-color:#171520}.mod-root .workspace-tabs .workspace-leaf,.workspace-tabs .workspace-leaf{background-color:#241b2f}.workspace-split.mod-root .workspace-leaf.mod-active .view-header{margin:0}.workspace-leaf-resize-handle{border-color:#372b3d}.workspace-leaf-resize-handle:hover{border-color:#808}.workspace-ribbon.mod-right.is-collapsed{border-left-color:#171520}.workspace-tab-container-after.is-after-active .workspace-tab-header-inner,.workspace-tab-container-before.is-before-active .workspace-tab-header-inner,.workspace-tab-header-container,.workspace-tab-header-inner,.workspace-tab-header.is-after-active .workspace-tab-header-inner,.workspace-tab-header.is-before-active .workspace-tab-header-inner{background-color:#171520}.workspace-tab-container-after.is-after-active,.workspace-tab-container-before.is-before-active,.workspace-tab-header.is-active,.workspace-tab-header.is-active .workspace-tab-header-inner,.workspace-tab-header.is-after-active,.workspace-tab-header.is-before-active{background-color:#262335}.workspace-tab-header.is-active .workspace-tab-header-inner{background-color:#241b2f}.workspace-tab-container-before.is-before-active{display:none}.vertical-tab-header{background-color:#241b2f}.workspace-split.mod-left-split .workspace-tabs .workspace-leaf{border-radius:0}.card,.suggestion-container.mod-search-suggestion,.suggestion-container.mod-search-suggestion .suggestion,input[type=search],input[type=text],textarea{background-color:#171520}
