Remove view-header margin

--- a/src/components/workspace.scss
+++ b/src/components/workspace.scss
@@ -11,7 +11,7 @@
 	background-color: $medium-purple;
 }
 
-.workspace-split.mod-root .workspace-leaf.mod-active .view-header {
+.view-header {
 	margin: 0;
 }
 
