--- a/src/components/workspace.scss
+++ b/src/components/workspace.scss
@@ -41,15 +41,8 @@
 .workspace-tab-header.is-before-active,
 .workspace-tab-header.is-after-active,
 .workspace-tab-header.is-active,
-.workspace-tab-header.is-active,
-.workspace-tab-header.is-active .workspace-tab-header-inner {
-	background-color: $light-purple;
-}
-
 .workspace-tab-header.is-active {
-	.workspace-tab-header-inner {
-		background-color: $medium-purple;
-	}
+	background-color: $light-purple;
 }
 
 .workspace-tab-container-before.is-before-active {
@@ -74,4 +67,16 @@ textarea {
 .suggestion-container.mod-search-suggestion,
 .suggestion-container.mod-search-suggestion .suggestion {
 	background-color: $dark-purple;
+}
+
+.community-modal-sidebar {
+	background-color: $medium-purple;
+}
+
+.workspace-split:not(.mod-root) .graph-controls.is-close {
+	background-color: $dark-purple;
+}
+
+.workspace-tab-header.is-active .workspace-tab-header-inner {
+	background-color: $light-purple;
 }
