--- a/obsidian.css
+++ b/obsidian.css
@@ -1,17 +1,65 @@
-.theme-dark {
+.theme-dark,
+.theme-light {
   --background-primary: #262335;
   --background-primary-alt: #241b2f;
   --background-secondary: #241b2f;
   --background-secondary-alt: #262335;
   --background-modifier-border: #372b3d;
   --background-modifier-form-field: #372b3d;
-  --background-modifier-form-field-highlighted: yellow;
   --background-modifier-box-shadow: none;
-  --background-modifier-success: yellow;
-  --background-modifier-error: yellow;
-  --background-modifier-error-hover: yellow;
+  --background-modifier-success: #7ee787;
+  --background-modifier-error: #8b0000;
+  --background-modifier-error-hover: #580000;
   --background-modifier-cover: #171520d2;
   --text-accent: #f97e72;
   --text-accent-hover: #ff7edb;
   --text-normal: #ffffff;
+  --text-muted: #a7a4ac;
+  --text-faint: #706a76;
+  --text-error: red;
+  --text-error-hover: yellow;
+  --text-highlight-bg: #d18616bb;
+  --text-highlight-bg-active: #d1861655;
+  --text-selection: #ffffff20;
+  --text-on-accent: #fff;
+  --interactive-normal: #614e83;
+  --interactive-hover: #745d9e;
+  --interactive-accent: #f97e72;
+  --interactive-accent-hover: #ff7edb;
+  --interactive-success: #7ee787;
+}
+
+input[type=text]:active, input[type=text]:focus {
+  box-shadow: none;
+}
+
+select:focus,
+.dropdown:focus {
+  box-shadow: none;
+}
+
+.checkbox-container:focus-within {
+  outline-width: 1px;
+}
+
+.modal-container {
+  backdrop-filter: blur(20px);
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 19px;
+  background-color: #706a76;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #a7a4ac;
 }
